<resources>
    <string name="app_name">First_Project</string>
    <string name="products">Products</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="settings">Settings</string>
    <string name="night_theme">Night theme</string>
    <string name="light_theme">Light theme</string>
    <string name="toast_add">This element has already been added</string>
    <string name="full_screen">Full screen</string>
    <string name="language">Language</string>
    <string name="title_activity_splash_screen">Splash_Screen</string>
    <string name="you_don_t_have_any_selected_products_yet">You don\'t have any selected products yet</string>
    <string name="add_a_product">Add a product</string>
    <string name="lang">EN</string>
    <string name="add_your_product">Add your product</string>
    <string name="next">Next</string>
    <string name="enter_the_description_for_your_product">Enter the description:</string>
    <string name="enter_the_brand_of_your_product">Enter the brand:</string>
    <string name="insert_a_link_to_a_photo_of_your_product">Insert a link to the photo:</string>
    <string name="preview_your_product">Preview your product</string>
    <string name="please_fill_in_this_field">Please fill in this field</string>
    <string name="fragment_detail_product">More detailed</string>


    <string-array name="language_options">
        <item>English</item>
        <item>Russian</item>
    </string-array>
</resources>