<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/item_home">

    <fragment
        android:id="@+id/item_home"
        android:name="com.example.first_project.ui.fragments.HomeFragment"
        android:label="@string/products"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_item_home_to_addProductFragment"
            app:destination="@id/addProductFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_item_home_to_detailProductFragment2"
            app:destination="@id/detailProductFragment2" />
    </fragment>

    <fragment
        android:id="@+id/item_favourite"
        android:name="com.example.first_project.ui.fragments.FavouriteFragment"
        android:label="@string/favourite"
        tools:layout="@layout/fragment_favourite">
        <action
            android:id="@+id/action_item_favourite_to_item_home"
            app:destination="@id/item_home"
            app:enterAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left" />
    </fragment>

    <fragment
        android:id="@+id/item_settings"
        android:name="com.example.first_project.ui.fragments.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/addProductFragment"
        android:name="com.example.first_project.ui.fragments.AddProductFragment"
        android:label="@string/add_your_product"
        tools:layout="@layout/fragment_add_product" >
        <action
            android:id="@+id/action_addProductFragment_to_previewFragment"
            app:destination="@id/previewFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/previewFragment"
        android:name="com.example.first_project.ui.fragments.PreviewFragment"
        android:label="@string/preview_your_product"
        tools:layout="@layout/fragment_preview" >
        <action
            android:id="@+id/action_previewFragment_to_item_home"
            app:destination="@id/item_home" />
    </fragment>
    <fragment
        android:id="@+id/detailProductFragment2"
        android:name="com.example.first_project.ui.fragments.DetailProductFragment"
        android:label="fragment_detail_product"
        tools:layout="@layout/fragment_detail_product" >

        <argument
            android:name="MyArg"
            app:argType="com.example.first_project.ui.products.Product" />
    </fragment>
</navigation>